# AMR_Project

./: .gitignore  .~lock.qr_detections.csv#  AVOIDANCE_DEBUG_BRIEF.md  CLAUDE_CODE_PROMPT.md  README.md  frames_2026-05-10_19.49.48.gv  qr_detections.csv  qr_detections.csv.bak_1778374467
src/amr_description/: package.xml
src/amr_exploration/: package.xml  setup.py
src/amr_exploration/amr_exploration/: exploration_node.py  exploration_node_filtered.py
src/amr_exploration/launch/: exploration.launch.py
src/amr_gazebo/: CMakeLists.txt  package.xml
src/amr_gazebo/env-hooks/: amr_gazebo.dsv.in
src/amr_gazebo/launch/: bridge.launch.py  town.launch.py
src/amr_gazebo/models/: generate_config.py
src/amr_gazebo/models/Community Clinic/: model.config  model.sdf
src/amr_gazebo/worlds/: town.world  town1.world  town2.world  town3.world
src/amr_gui/: package.xml  setup.cfg  setup.py
src/amr_gui/amr_gui/: action_client.py  mission_console.py  mock_mission_server.py
src/amr_gui/launch/: gui.launch.py
src/amr_landmarks/: package.xml  setup.cfg  setup.py
src/amr_mapping/: CMakeLists.txt  package.xml
src/amr_mapping/config/: slam_params.yaml
src/amr_mapping/launch/: mapping_full.launch.py  slam_mapping.launch.py
src/amr_mapping/maps/: my_town_map1.pgm
src/amr_mapping/rviz/: mapping.rviz
src/amr_mapping/scripts/: odom_to_tf.py
src/amr_mission_executor/: package.xml  setup.cfg  setup.py
src/amr_mission_executor/amr_mission_executor/: mission_node_old.py
src/amr_mission_executor/config/: landmarks.yaml
src/amr_mission_executor/launch/: mission_executor.launch.py
src/amr_mission_manager/: CMakeLists.txt  package.xml  setup.cfg
src/amr_mission_manager/.deprecated/: setup.py
src/amr_mission_manager/action/: ExecuteMission.action
src/amr_mission_manager/srv/: GetLandmarkPosition.srv
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/config/: nav2_params.yaml
src/amr_navigation/launch/: full_system.launch.py  navigation.launch.py
src/amr_navigation/maps/: my_town_map.pgm  my_town_map.yaml  my_town_map1.yaml
src/amr_traffic/: package.xml  setup.cfg  setup.py
src/amr_traffic/amr_traffic/: random_walker_node.py
src/amr_traffic/config/: random_walker.yaml
src/amr_traffic/launch/: spawn_one_traffic_robot.launch.py  traffic_only_demo.launch.py  two_traffic_robots.launch.py
(+24 files in other folders)
